# saturdays

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  mdl_style.rb  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-feature-request.yml  1-issue.yml
.github/workflows/: docs.yml  lint.yml  pages.yml  test.yml
docs/sources/: index.md  quickstart.md  software_pages.md
docs/sources/dev_guide/: contributing.md
docs/sources/samples/: bash.md  python.md  slurm.md
docs/sources/tutorials/: ai.md  big_data.md  comp_chem.md  espresso_compilation.md  fin_mod.md  index.md  workflows.md
samples/bash/: .bashrc
samples/python/: run_ase.py  run_ccu.py  run_espresso.py  run_gaussian.py  run_infrared_ccu.py  run_neb.py  run_vasp.py  run_vib.py  run_vib_ccu.py
samples/slurm/: espresso.sh  gaussian.sh  vasp.sh
src/saturdays/: __init__.py
